fix delete collapse of tips

--- a/src/pages/SurveyNew/components/PopupAddOrEditAttribute/styles.module.scss
+++ b/src/pages/SurveyNew/components/PopupAddOrEditAttribute/styles.module.scss
@@ -95,9 +95,8 @@
   }
 }
 
-.collapse > p {
+.tipsDescription > p {
   margin-bottom: 8px;
-  cursor: pointer;
 }
 
 .btn {
